<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <artifactId>ingrid-base-pom</artifactId>
    <groupId>de.ingrid</groupId>
    <version>5.0.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ingrid-communication</artifactId>
  <packaging>jar</packaging>
  <version>5.15.0.3324-SNAPSHOT</version>
  <name>ingrid-communication</name>

  <!-- ==================== Source Code Management ==================== -->
  <scm>
    <connection>scm:git:git@github.com:informationgrid/ingrid-communication.git</connection>
    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-communication.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <!-- ==================== REPOSITORIES ==================== -->
  <repositories>
    <!-- Repo of parent pom needed, parent pom may not be installed locally
      yet -->
    <repository>
      <id>nexus</id>
      <name>Nexus Repo</name>
      <url>https://nexus.informationgrid.eu/repository/maven-public</url>
    </repository>
  </repositories>

  <!-- ==================== DEPENDENCY MANAGEMENT ==================== -->

  <!-- ==================== DEPENDENCIES ==================== -->
  <dependencies>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.1</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>3.0.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>1.51</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk15on</artifactId>
      <version>1.51</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- ==================== Build Configuration ==================== -->
  <build>
    <plugins>
      <!--
        This plugin configures the git-flow for this project
      -->
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>4.35.1</version>
        <configuration>
          <activeRecipes>
            <recipe>org.openrewrite.java.migrate.UpgradeJava17</recipe>
            <recipe>org.openrewrite.java.migrate.JavaxMigrationToJakarta</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>1.13.0</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0-m5.1</version>
        <configuration>
          <defaultOriginUrl>https://github.com/informationgrid/ingrid-communication</defaultOriginUrl>
          <noDeploy>true</noDeploy>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jdeprscan-plugin</artifactId>
        <version>3.0.0-alpha-1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
